[package]
name = "prowl"
version = "0.2.3"
edition = "2021"
authors = ["Myles Empty Best"]
license = "MIT" # URL Encoding and Tokio are MIT only.
keywords = ["prowl", "notifications"]
description = "Send prowl notifications. See https://www.prowlapp.com"
homepage = "https://github.com/TheEmpty/prowl"
repository = "https://github.com/TheEmpty/prowl"

[dependencies]
urlencoding = "2.1"
log = "0.4.0"
reqwest = "0.11.11"
thiserror = "1.0.33"
derive-getters = "0.2.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[lib]
path = "src/lib.rs"
